<resources>

    <!-- Nome do aplicativo -->
    <string name="app_name">Indra Films</string>

    <!-- ##### SplashScreen ##### -->
    <string name="bg_img_description">Imagem de background</string>
    <string name="logo_img_description">Logo</string>

    <!-- ##### LoginActivity ##### -->
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="txt_btn_login">Login</string>
    <string name="login_message_error">E-mail ou senha inválidos</string>
    <string name="fields_required">Campos obrigatórios</string>

    <!-- ##### MainActivity ##### -->
    <string name="txt_title">Filmes mais populares de 2020</string>
    <string name="txt_bg_icon">ícone</string>
    <string name="rv_bg_img_description">Imagem do Poster</string>
    <string name="rv_title_example">Avengers Endgame</string>
    <string name="rv_release_date_example">25/04/2019</string>

    <!-- ##### DetailsActivity ##### -->
    <string name="toolbar_title">Detalhes do Filme</string>
    <string name="label_title">Título</string>
    <string name="label_release_date">Data de Lançamento</string>
    <string name="label_average">Média</string>
    <string name="label_overview">Sinopse</string>
    <string name="txt_title_example">Avengers Endgame</string>
    <string name="txt_release_date_example">25/04/2019</string>
    <string name="txt_average">10.0</string>
    <string name="txt_overview_example">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <!-- Preferences Keys -->
    <string name="app_pref">app_pref</string>
    <string name="key_token">KEY_TOKEN</string>

    <!-- Extras Keys -->
    <string name="key_movie_details">KEY_MOVIE_DETAILS</string>

    <!-- Messages -->
    <string name="msg_error">Ops! Tente novamente</string>

    <!-- Menu -->
    <string name="menu_title_logout">Logout</string>
    <string name="menu_title_sync">Sincronizar</string>
    <string name="txt_name">Bruno Felix</string>

    <!-- Logo contentDescription -->
    <string name="txt_contentDescription">Imagem</string>

</resources>