<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie"
            type="com.indracompany.indrafilmsapp.data.api.model.Movie" />
    </data>

    <LinearLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_bg"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progressBar_card"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/red"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/imgPoster"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/rv_bg_img_description"
                    android:scaleType="centerCrop"
                    android:visibility="visible"
                    app:image="@{movie.posterPath}"
                    app:srcCompat="@drawable/img_poster" />

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@{movie.title}"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="@string/rv_title_example" />

                <TextView
                    android:id="@+id/txtReleaseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@{movie.releaseDate}"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    tools:text="@string/rv_release_date_example" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</layout>